Implement landing page header

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Banka</title>
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>kowope</title>
 </head>
 <body>
-    This is banka
+    <div class="container">
+        <header class="header">
+            <div class="header__inner row-max-size">
+                <h1 class="header__title">kowope</h1>
+            </div>
+        </header>
+    </div>
 </body>
 </html>
