Implement landing page banner

--- a/ui/index.html
+++ b/ui/index.html
@@ -16,5 +16,15 @@
             </div>
         </header>
     </div>
+    
+    <main class="banner outer-spacing">
+        <div class="banner__inner row-max-size">
+            <div class="banner__body">
+                <p clas>Lorsem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                
+                <a class="button button--cta banner__button" href="./sign-up.html">Sign Up</a>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
