Implement landing page sign in form

--- a/ui/index.html
+++ b/ui/index.html
@@ -26,5 +26,11 @@
             </div>
         </div>
     </main>
+    
+    <form class="form row-max-size outer-spacing" action="#login-as-demo">
+        <input class="form__email" type="text" placeholder="Input Email">
+        <input class="form__password" type="text" placeholder="Input Password">
+        <input class="form__login button button--cta" type="submit" value="Login">
+    </form>
 </body>
 </html>
