--- a/ui/index.html
+++ b/ui/index.html
@@ -32,5 +32,58 @@
         <input class="form__password" type="text" placeholder="Input Password">
         <input class="form__login button button--cta" type="submit" value="Login">
     </form>
+    
+    <section class="features outer-spacing row-max-size">
+        <h2>Features</h2>
+        <ul class="list">
+            <li class="list-item">
+                <h4>Lorem Ipsum</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                    eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+            </li>
+
+            <li class="list-item">
+                <h4>Lorem Ipsum</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                    eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+            </li>
+
+            <li class="list-item">
+                <h4>Lorem Ipsum</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                    eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+            </li>
+
+            <li class="list-item">
+                <h4>Lorem Ipsum</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                    eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+            </li>
+
+            <li class="list-item">
+                <h4>Lorem Ipsum</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                    eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+            </li>
+
+            <li class="list-item">
+                <h4>Lorem Ipsum</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                    eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+            </li>
+        </ul>
+    </section>
 </body>
 </html>
