Implement landing page review section

--- a/ui/index.html
+++ b/ui/index.html
@@ -85,5 +85,34 @@
             </li>
         </ul>
     </section>
+    
+    <section class="reviews outer-spacing row-max-size">
+        <h2>Reviews</h2>
+        <ul class="list">
+            <li class="list-item">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim adminim veniam,
+                    quis nostrud exercitation ullamco.
+                </p>
+                <div class="media">
+                    <img src="./images/dum-img.jpg" alt="image of the reviewer">
+                    <h4>Ali Simbi</h4>
+                </div>
+            </li>
+
+            <li class="list-item">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim adminim veniam,
+                    quis nostrud exercitation ullamco.
+                </p>
+                <div class="media">
+                    <img src="./images/dum-img.jpg" alt="image of the reviewer">
+                    <h4>Ali Simbi</h4>
+                </div>
+            </li>
+        </ul>
+    </section>
 </body>
 </html>
