Add appropraite spacing

--- a/ui/index.html
+++ b/ui/index.html
@@ -114,5 +114,9 @@
             </li>
         </ul>
     </section>
+    
+    <footer class="footer">
+        <p>Made with love by komsic</p>
+    </footer>
 </body>
 </html>
