--- a/ui/admin-dashboard.html
+++ b/ui/admin-dashboard.html
@@ -6,9 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <header class="header outer-spacing">
+        <div class="header__inner row-max-size">
+            <h1 class="header__title">Admin Dashboard</h1>
+        </div>
+    </header>
 </body>
 </html>
