Refactor form module style to be more generic

--- a/ui/index.html
+++ b/ui/index.html
@@ -28,9 +28,9 @@
     </main>
     
     <form class="form row-max-size outer-spacing" action="#login-as-demo">
-        <input class="form__email" type="text" placeholder="Input Email">
-        <input class="form__password" type="text" placeholder="Input Password">
-        <input class="form__login button button--cta" type="submit" value="Login">
+        <input class="form__text" type="text" placeholder="Input Email">
+        <input class="form__text" type="text" placeholder="Input Password">
+        <input class="form__button button button--cta" type="submit" value="Login">
     </form>
     
     <section class="features outer-spacing row-max-size">
