Implement user, acct, and transation on admin dashboard

--- a/ui/admin-dashboard.html
+++ b/ui/admin-dashboard.html
@@ -14,5 +14,10 @@
             <h1 class="header__title">Admin Dashboard</h1>
         </div>
     </header>
+    
+    <form class="outer-spacing row-max-size form" action="">
+        <input class="form__text" type="text" placeholder="Search for Acct, Transaction or User">
+        <input class="form__button button button--cta" type="submit" value="Search">
+    </form>
 </body>
 </html>
