Implement header in acct details ui

--- a/ui/account-details.html
+++ b/ui/account-details.html
@@ -9,6 +9,10 @@
     <title>Account Details</title>
 </head>
 <body>
-    
+    <header class="header outer-spacing">
+        <div class="header__inner row-max-size">
+            <h1 class="header__title">Account Details</h1>
+        </div>
+    </header>
 </body>
 </html>
