--- a/ui/account-details.html
+++ b/ui/account-details.html
@@ -22,7 +22,10 @@
             </aside>
 
             <main class="main">
-                
+                <form class="form" action="">
+                    <input class="form__text" type="text" placeholder="Search for transaction by id or date">
+                    <input class="form__button button button--cta" type="submit" value="Search">
+                </form>
             </main>
         </div>
     </div>
