Implement account information in account details ui

--- a/ui/account-details.html
+++ b/ui/account-details.html
@@ -26,6 +26,29 @@
                     <input class="form__text" type="text" placeholder="Search for transaction by id or date">
                     <input class="form__button button button--cta" type="submit" value="Search">
                 </form>
+                
+                <div class="account-container">
+                    <div class="account">
+                        <div>
+                            <small>Account Number <small>(Active)</small></small>
+                            <p>0218547925</p>
+                        </div>
+
+                        <div>
+                            <small>Account Type</small>
+                            <p>Current</p>
+                        </div>
+                    </div>
+                    
+                    <div class="balance">
+                        <small>Account Balance</small>
+                        <p class="amount">
+                            <span class="amount__currency">#</span>
+                            <span class="amount__value">20,000</span>
+                            <span class="amount__kobo">.00</span>
+                        </p>
+                    </div>
+                </div>
             </main>
         </div>
     </div>
