Implement footer in account details ui

--- a/ui/account-details.html
+++ b/ui/account-details.html
@@ -148,5 +148,9 @@
             </main>
         </div>
     </div>
+    
+    <footer class="footer">
+        <p>Made with love by komsic</p>
+    </footer>
 </body>
 </html>
