--- a/ui/transaction-details.html
+++ b/ui/transaction-details.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <header class="header outer-spacing">
+        <div class="header__inner row-max-size row-max-size--90">
+            <div id="menu-more" class="header__menu-more">&#x2630</div>
+            <h1 class="header__title">Transaction Details</h1>
+        </div>
+    </header>
 </body>
 </html>
