Implement main content layout in transaction details ui

--- a/ui/transaction-details.html
+++ b/ui/transaction-details.html
@@ -15,5 +15,22 @@
             <h1 class="header__title">Transaction Details</h1>
         </div>
     </header>
+    
+    <div class="row-max-size row-max-size--90">
+        <div class="acct-container">
+            <aside class="aside" id="aside">
+                <ul class="aside-list">
+                    <div class="close-aside-container">
+                        <button id="close" class="close-aside">&#x00D7</button>
+                    </div>
+                    <li><a href="">Print</a></li>
+                </ul>
+            </aside>
+
+            <main class="main">
+                
+            </main>
+        </div>
+    </div>
 </body>
 </html>
