Implement customer detail media in transaction details ui

--- a/ui/transaction-details.html
+++ b/ui/transaction-details.html
@@ -28,7 +28,7 @@
             </aside>
 
             <main class="main">
-                <div>
+                <div class="media media--start">
                     <img src="./images/dum-img.jpg" alt="client image">
                     <div>
                         <small>0215985369</small>
