Implement cashier detail media in transaction details ui

--- a/ui/transaction-details.html
+++ b/ui/transaction-details.html
@@ -63,7 +63,7 @@
                     </div>
                 </div>
                 
-                <div>
+                <div class="media media--end">
                    <div>
                         <small>s406</small>
                         <p>Griphook The Goblin</p>
