--- a/ui/cashier-dashboard.html
+++ b/ui/cashier-dashboard.html
@@ -29,7 +29,10 @@
             </aside>
 
             <main class="main">
-                
+                <form class="form" action="">
+                    <input class="form__text" type="text" placeholder="Search for account by email or name">
+                    <input class="form__button button button--cta" type="submit" value="Search">
+                </form>
             </main>
         </div>
     </div>
