Implement transaction controls in cashier ui dashboard

--- a/ui/cashier-dashboard.html
+++ b/ui/cashier-dashboard.html
@@ -33,6 +33,11 @@
                     <input class="form__text" type="text" placeholder="Search for account by email or name">
                     <input class="form__button button button--cta" type="submit" value="Search">
                 </form>
+                
+                <ul class="list list--dashboard">
+                    <li class="list-item list-item--dashboard">Deposit</li>
+                    <li class="list-item list-item--dashboard">Withdrawal</li>
+                </ul>
             </main>
         </div>
     </div>
