--- a/ui/cashier-dashboard.html
+++ b/ui/cashier-dashboard.html
@@ -38,6 +38,202 @@
                     <li class="list-item list-item--dashboard">Deposit</li>
                     <li class="list-item list-item--dashboard">Withdrawal</li>
                 </ul>
+                
+                <div class="c-trans">
+                    <h3>Recents Transactions</h3>
+
+                    <ul class="list list--c-trans">
+                        <li class="trans">
+                            <div>
+                                <small>Success</small>
+                                <p>24th Mar, 2019</p>
+                            </div>
+                            <div>
+                                <small>0714548395</small>
+                                <p>K. Everdeen</p>
+                            </div>
+                            <div>
+                                <small>deposit</small>
+                                <p class="amount">
+                                    <span class="amount__currency">#</span>
+                                    <span class="amount__value">20,000</span>
+                                    <span class="amount__kobo">.00</span>
+                                </p>
+                            </div>
+                        </li>
+
+                        <li class="trans">
+                            <div>
+                                <small>Success</small>
+                                <p>24th Mar, 2019</p>
+                            </div>
+                            <div>
+                                <small>0714548395</small>
+                                <p>K. Everdeen</p>
+                            </div>
+                            <div>
+                                <small>withdraw</small>
+                                <p class="amount">
+                                    <span class="amount__currency">#</span>
+                                    <span class="amount__value">20,000</span>
+                                    <span class="amount__kobo">.00</span>
+                                </p>
+                            </div>
+                        </li>
+
+                        <li class="trans">
+                            <div>
+                                <small>Fail</small>
+                                <p>24th Mar, 2019</p>
+                            </div>
+                            <div>
+                                <small>0714548395</small>
+                                <p>K. Everdeen</p>
+                            </div>
+                            <div>
+                                <small>withdraw</small>
+                                <p class="amount">
+                                    <span class="amount__currency">#</span>
+                                    <span class="amount__value">20,000</span>
+                                    <span class="amount__kobo">.00</span>
+                                </p>
+                            </div>
+                        </li>
+
+                        <li class="trans">
+                            <div>
+                                <small>Success</small>
+                                <p>24th Mar, 2019</p>
+                            </div>
+                            <div>
+                                <small>0714548395</small>
+                                <p>K. Everdeen</p>
+                            </div>
+                            <div>
+                                <small>withdraw</small>
+                                <p class="amount">
+                                    <span class="amount__currency">#</span>
+                                    <span class="amount__value">20,000</span>
+                                    <span class="amount__kobo">.00</span>
+                                </p>
+                            </div>
+                        </li>
+
+                        <li class="trans">
+                            <div>
+                                <small>Success</small>
+                                <p>24th Mar, 2019</p>
+                            </div>
+                            <div>
+                                <small>0714548395</small>
+                                <p>K. Everdeen</p>
+                            </div>
+                            <div>
+                                <small>withdraw</small>
+                                <p class="amount">
+                                    <span class="amount__currency">#</span>
+                                    <span class="amount__value">20,000</span>
+                                    <span class="amount__kobo">.00</span>
+                                </p>
+                            </div>
+                        </li>
+
+                        <li class="trans">
+                            <div>
+                                <small>Success</small>
+                                <p>24th Mar, 2019</p>
+                            </div>
+                            <div>
+                                <small>0714548395</small>
+                                <p>K. Everdeen</p>
+                            </div>
+                            <div>
+                                <small>withdraw</small>
+                                <p class="amount">
+                                    <span class="amount__currency">#</span>
+                                    <span class="amount__value">20,000</span>
+                                    <span class="amount__kobo">.00</span>
+                                </p>
+                            </div>
+                        </li>
+
+                        <li class="trans">
+                            <div>
+                                <small>Success</small>
+                                <p>24th Mar, 2019</p>
+                            </div>
+                            <div>
+                                <small>0714548395</small>
+                                <p>K. Everdeen</p>
+                            </div>
+                            <div>
+                                <small>withdraw</small>
+                                <p class="amount">
+                                    <span class="amount__currency">#</span>
+                                    <span class="amount__value">20,000</span>
+                                    <span class="amount__kobo">.00</span>
+                                </p>
+                            </div>
+                        </li>
+
+                        <li class="trans">
+                            <div>
+                                <small>Success</small>
+                                <p>24th Mar, 2019</p>
+                            </div>
+                            <div>
+                                <small>0714548395</small>
+                                <p>K. Everdeen</p>
+                            </div>
+                            <div>
+                                <small>withdraw</small>
+                                <p class="amount">
+                                    <span class="amount__currency">#</span>
+                                    <span class="amount__value">20,000</span>
+                                    <span class="amount__kobo">.00</span>
+                                </p>
+                            </div>
+                        </li>
+
+                        <li class="trans">
+                            <div>
+                                <small>Success</small>
+                                <p>24th Mar, 2019</p>
+                            </div>
+                            <div>
+                                <small>0714548395</small>
+                                <p>K. Everdeen</p>
+                            </div>
+                            <div>
+                                <small>withdraw</small>
+                                <p class="amount">
+                                    <span class="amount__currency">#</span>
+                                    <span class="amount__value">20,000</span>
+                                    <span class="amount__kobo">.00</span>
+                                </p>
+                            </div>
+                        </li>
+
+                        <li class="trans">
+                            <div>
+                                <small>Success</small>
+                                <p>24th Mar, 2019</p>
+                            </div>
+                            <div>
+                                <small>0714548395</small>
+                                <p>K. Everdeen</p>
+                            </div>
+                            <div>
+                                <small>withdraw</small>
+                                <p class="amount">
+                                    <span class="amount__currency">#</span>
+                                    <span class="amount__value">20,000</span>
+                                    <span class="amount__kobo">.00</span>
+                                </p>
+                            </div>
+                        </li>           
+                    </ul>
+                </div>
             </main>
         </div>
     </div>
