Add a margin above footer of cashier dashboard ui

--- a/ui/cashier-dashboard.html
+++ b/ui/cashier-dashboard.html
@@ -16,7 +16,7 @@
         </div>
     </header>
     
-    <div class="row-max-size row-max-size--90">
+    <div class="row-max-size row-max-size--90 outer-spacing">
         <div class="acct-container">
             <aside class="aside" id="aside">
                 <ul class="aside-list">
