Implement nav controls in client dashboard ui

--- a/ui/client-dashboard.html
+++ b/ui/client-dashboard.html
@@ -23,6 +23,9 @@
                     <div class="close-aside-container">
                         <button id="close" class="close-aside">&#x00D7</button>
                     </div>
+                    <li><a href="">Create Account</a></li>
+                    <li><a href="">Update Profile</a></li>
+                    <li><a href="">Logout</a></li>
                 </ul>
             </aside>
 
