Add transaction search to the client dashboard ui

--- a/ui/client-dashboard.html
+++ b/ui/client-dashboard.html
@@ -30,7 +30,10 @@
             </aside>
 
             <main class="main">
-                
+                <form class="form" action="">
+                    <input class="form__text" type="text" placeholder="Search for transaction by id">
+                    <input class="form__button button button--cta" type="submit" value="Search">
+                </form>
             </main>
         </div>
     </div>
