Add a list to show all accts own by client in user dashboard ui

--- a/ui/client-dashboard.html
+++ b/ui/client-dashboard.html
@@ -40,6 +40,30 @@
                     <p>Ciroma Chukwuma Adekunle</p>
                 </div>
                 
+                <div>
+                    <h3>Accounts</h3>
+                    <ul class="list list--c-trans">
+                        <li class="trans">
+                            <div><strong>Acct No</strong></div>
+                            <div><strong>Type</strong></div>
+                            <div><strong>Balance</strong></div>
+                        </li>
+                        <li class="trans">
+                            <div>8520147856</div>
+                            <div>Fixed-deposit</div>
+                            <div>#51,258.32</div>
+                        </li>
+                        <li class="trans">
+                            <div>8520147856</div>
+                            <div>Current</div>
+                            <div>#51,258.32</div>
+                        </li>
+                        <li class="trans">
+                            <div>8520147856</div>
+                            <div>Savings</div>
+                            <div>#51,258.32</div>
+                        </li>
+                    </ul>
                 
             </main>
         </div>
