Add a button to create new acct in user dashboard ui

--- a/ui/client-dashboard.html
+++ b/ui/client-dashboard.html
@@ -64,7 +64,9 @@
                             <div>#51,258.32</div>
                         </li>
                     </ul>
-                
+                    
+                    <button class="button button--cta button--full-width">Create Account</button>
+                </div>
             </main>
         </div>
     </div>
