Add user details to profile

--- a/ui/transaction-details.html
+++ b/ui/transaction-details.html
@@ -39,7 +39,7 @@
                 <div class="trans-details">
                     <div>
                         <p>Id:</p>
-                        <p><strong>0258</strong></p>
+                        <p><strong>TR-0258</strong></p>
                     </div>
                     
                     <div>
