--- a/ui/user-profile.html
+++ b/ui/user-profile.html
@@ -23,11 +23,43 @@
                     <div class="close-aside-container">
                         <button id="close" class="close-aside">&#x00D7</button>
                     </div>
+                    <li><a href="">Deactivate</a></li>
+                    <li><a href="">Update Profile</a></li>
+                    <li><a href="">Logout</a></li>
                 </ul>
             </aside>
 
             <main class="main">
+                <div><img src="./images/dum-img.jpg" alt="user image" class="media__img"></div>
                 
+                <div class="trans-details">
+                    <div>
+                        <p>id:</p>
+                        <p><strong>CL-25841</strong></p>
+                    </div>
+
+                    <div>
+                        <p>First Name:</p>
+                        <p><strong>Frodo</strong></p>
+                    </div>
+
+                    <div>
+                        <p>Last Name:</p>
+                        <p><strong>Baggins</strong></p>
+                    </div>
+
+                    <div>
+                        <p>Email:</p>
+                        <p><strong>frodo@shrine.com</strong></p>
+                    </div>
+
+                    <div>
+                        <p>type:</p>
+                        <p><strong>Client</strong></p>
+                    </div>
+                </div>
+                
+                <button class="button button--cta button--full-width">Change Password</button>
             </main>
         </div>
     </div>
